--- a/view/html/admin_options.html
+++ b/view/html/admin_options.html
@@ -184,7 +184,7 @@
                                                     <label for="cap-###title###" title="###cap_name_full###" class="tooltip" alt="###description###">###cap_name###</label>
                                                 </div>
                                                 <!-- ###CAPABILITY_DELETE### begin-->
-                                                <div class="icon-delete" onclick="mObj.deleteCapability('###title###', '###cap_name###');"></div>
+                                                <div class="icon-delete" onclick="mObj.deleteCapability('###title###', '###cap_name###');"><img title="delete capability" rel="delete capability" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></div>
                                                 <!-- ###CAPABILITY_DELETE### end-->
                                             </div>
                                             <!-- ###CAPABILITY_ITEM### end-->
