--- a/view/html/admin_options.html
+++ b/view/html/admin_options.html
@@ -53,7 +53,7 @@
                                 <!-- ###MAIN_MENU_TAB### begin-->
                                 <div id="tabs-1">
                                     <div class="helpbox postbox main-menu-help">
-                                        <div class="aacsprite aacsmicons aachelp"><span class="help1">###LABEL_172###</span></div>                                                      
+                                        <div class="aacsprite aacsmicons aachelp"><span class="help1">###LABEL_172###</span></div>
                                             <a href="#" class="squarebutton reorganize-menu">###LABEL_12###</a>
                                         <br class="clear" />
                                     </div>
@@ -90,7 +90,7 @@
                                         <div class="mbox">
                                             <input type="text" placeholder="###LABEL_15###" class="initialize-url-text" value="" />
                                             <a href="#" class="initialize-url lilsqbutton" >###LABEL_16###</a>
-                                            <a href="#" class="refresh-metagox-list squarebutton" >###LABEL_17###</a>                                            
+                                            <a href="#" class="refresh-metagox-list squarebutton" >###LABEL_17###</a>
                                         </div>
                                                 <div id="progressbar"></div>
                                         <br class="clear" />
@@ -169,7 +169,7 @@
                                 <!-- ###CAPABILITY_TAB### begin-->
                                 <div id="tabs-3">
                                     <div class="helpbox postbox">
-                                        <div class="aacsprite aacsmicons aachelp"><span class="help1">###LABEL_169###</span></div>                                                      
+                                        <div class="aacsprite aacsmicons aachelp"><span class="help1">###LABEL_169###</span></div>
                                         <br class="clear" />
                                     </div>
                                     <!-- ###CAPABILITY_LIST### begin-->
@@ -389,7 +389,7 @@
                                             <!-- ###CATEGORY### end-->
                                             <!-- ###POST_INFORMATION### end-->
                                             <div class="ui-state-highlight ui-corner-all">
-                                                <div class="aacsprite aactinyicons infoicon"><span>###LABEL_71###</span></div>                                                   
+                                                <div class="aacsprite aactinyicons infoicon"><span>###LABEL_71###</span></div>
                                             </div>
                                         </div>
                                     </div>
@@ -437,7 +437,7 @@
                                                     <option value="###value###" ###selected### >###title###</option>
                                                     <!-- ###ROLE_LIST### end-->
                                                 </select>
-                                                <a href="#" class="hide-if-no-js button" id="site-ok">###LABEL_76###</a>
+                                                <a href="#" class="hide-if-no-js lilsqbutton" id="site-ok">###LABEL_76###</a>
                                                 <a href="#" class="hide-if-no-js" id="site-cancel">###LABEL_77###</a>
                                             </div>
                                         </div>
@@ -529,14 +529,6 @@
                         </div>
                     </div>
                     <!-- ###ROLE_METABOX### end-->
-                    
-                    <div class="socbox">
-                        <a href="http://wordpress.org/extend/plugins/advanced-access-manager"  class="aacsprite aacicons whimbawordpress" rel="wordpress"><img title="wordpress" rel="wordpress" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></a>
-                        <a href="http://www.facebook.com/whimba"  class="aacsprite aacicons whimbaface" rel="facebook"><img title="facebook" rel="facebook" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></a>
-                        <a href="http://twitter.com/whimba" class="aacsprite aacicons whimbatwit" rel="twitter"><img title="twitter" rel="twitter" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></a>
-                        <a href="http://whimba.org/support" class="aacsprite aacicons whimbasupport" rel="support"><img title="support" rel="support" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></a>
-                    </div>
-                    
                 </div>
             </div>
         </div>
