--- a/view/css/wpaccess_style.css
+++ b/view/css/wpaccess_style.css
@@ -627,45 +627,33 @@ div a.lilsqbutton {
 }
 
 .tooltip {
-color: #434343;
-cursor: default;
+	color: #434343;
+	cursor: default;
 }
 
 .tooltip {
-position: relative;
+	position: relative;
 }
 
-.tooltip:hover::after {
-font-weight: normal;
-font-family: helvetica, arial, sans serif;
-font-size: 13px;
-line-height: 14px;
-color: #434343;
-content: attr(alt);
-text-align: left;
-text-shadow: 0px 1px 0px rgb(253,253,253);
-width: 160px;
-background-color: rgb(240,240,240);
-background-image: -webkit-gradient(linear, left top, left bottom, from(rgb(245,245,245)), to(rgb(235,235,235)));
-background-image: -moz-linear-gradient(top,  rgb(245,245,245),  rgb(235,235,235));
-border: 1px solid rgb(210,210,210);
-position: absolute;
-top:20px;
-left: 0px;
-padding: 10px 15px 10px 15px;
-line-height: 16px;
-z-index: 99999999;
--o-border-radius: 5px;
--webkit-border-radius: 5px;
--moz-border-radius: 5px;
-border-radius: 5px;
--webkit-box-shadow: inset 0px 1px 0px rgb(252,252,252), 1px 1px 3px rgb(240,240,240), -1px 0px 3px rgb(240,240,240);
--moz-box-shadow: inset 0px 1px 0px rgb(252,252,252), 1px 1px 3px rgb(240,240,240), -1px 0px 3px rgb(240,240,240);
--o-box-shadow: inset 0px 1px 0px rgb(252,252,252), 1px 1px 3px rgb(240,240,240), -1px 0px 3px rgb(240,240,240);
-box-shadow: inset 0px 1px 0px rgb(252,252,252), 1px 1px 3px rgb(240,240,240), -1px 0px 3px rgb(240,240,240);
+.tooltip:hover:after {
+    background: none repeat scroll 0 0 #FFFFFF;
+    border-top: 2px solid #999999;
+    bottom: 0;
+    color: #555555;
+    content: attr(alt);
+    float: left;
+    font-family: helvetica,arial,sans serif;
+    font-size: 14px;
+    left: 0;
+    line-height: 18px;
+    padding: 12px 20px 10px 15px;
+    position: fixed;
+    text-align: left;
+    width: 100%;
+    z-index: 999;
 }
-
 label.tooltip { width: 80%;display: block;float: left; }
+label.tooltip:hover { color: #898989; }
 .right { float: right; }
 #major-publishing-actions { padding: 8px 0 6px 8px; }
 #misc-publishing-actions { padding: 2px 0 20px 8px;color: #6888B8; }
