Fixed prompt close button 2 + Input Margin
git-svn-id: https://plugins.svn.wordpress.org/advanced-access-manager/trunk@573859 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/view/css/wpaccess_style.css
+++ b/view/css/wpaccess_style.css
@@ -1005,3 +1005,5 @@ box-shadow: 0 0 2px #787878;
 .ui-icon-closethick:hover {
 background-color: #898989;border:0;
 }
+.ui-dialog-titlebar-close:hover { border: 0; }
+input.capability-name { margin: 5px; }
