--- a/view/css/wpaccess_style.css
+++ b/view/css/wpaccess_style.css
@@ -325,7 +325,7 @@ font-size: 12px;
 }
 
 .initialize-url-text{
-    width: 50%;
+    width: 45%;
     margin: 4px;
     padding: 6px;
 }
@@ -534,6 +534,7 @@ ul.filetree {
 div.tree-holder #sidetreecontrol a { 
     color: #80b3ff; 
 }
+#sidetree #sidetreecontrol a { color: #656565; }
 
 .aam-tabs ul.ui-tabs-nav li.ui-state-default a {
     color: #787878;
@@ -543,12 +544,14 @@ div.tree-holder #sidetreecontrol a {
     padding: 0.6em 0.8em;
     font-weight: bold;
     text-transform: uppercase;
+line-height: 14px;
 }
 
 .aam-tabs ul.ui-tabs-nav li:hover { 
-    top:1px;
+    top:2px;
     margin-bottom:0;
-    line-height: 14px; 
+    line-height: 13px; 
+background-color: #fefefe;
 }
 
 .aam-tabs ul.ui-tabs-nav li.ui-state-default:hover a { 
@@ -619,7 +622,7 @@ span.help2 { margin: 0 10px;position: absolute;line-height: 120%; }
 .smplus:hover {}
 .smminus {}
 .smminus:hover {}
-.smex { background-position: -200px -52px;width:24px;height:24px;cursor:pointer;float:right;text-indent: -99999px; }
+.smex { background-position: -200px -52px;width:24px;height:24px;cursor:pointer;float:right;text-indent: -190px; }
 .smex:hover { background-position: -200px -78px;width:24px;height:24px;cursor:pointer;float:right; }
 
 input ~ label.tooltip {
@@ -777,6 +780,7 @@ div a.lilsqbutton, .ui-dialog .ui-dialog-buttonpane button {
     left: 0;
     line-height: 18px;
     padding: 12px 20px 10px 15px;
+text-indent: 2px;
     position: fixed;
     text-align: left;
     width: 100%;
@@ -804,7 +808,7 @@ label.tooltip:hover {
 }
 
 #major-publishing-actions { 
-    padding: 8px 0 6px 8px; 
+    padding: 8px 4px 4px 8px; 
 }
 
 #misc-publishing-actions { 
@@ -819,7 +823,7 @@ label.tooltip:hover {
 }
 
 .change-role, .change-user, .change-site { 
-    color: #777777;
+    color: #999999;
     font-size: 10px;
     text-decoration: none; 
 }
@@ -908,13 +912,7 @@ h3 span {
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: Verdana,Arial,sans-serif; font-size: 1em; }
 .ui-widget-content { border: 1px solid #aaaaaa; background: #ffffff url(images/ui-bg_flat_75_ffffff_40x100.png) 50% 50% repeat-x; color: #444444; }
 .ui-widget-header, .ui-widget-content div.ui-dialog-titlebar { border: 1px solid #aaaaaa;color: #343434; font-weight: bold; 
-background-image: url("images/bary.png"), -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.35) 40%, rgba(0,0,0,0.45) 60%, rgba(0,0,0,0.5) 100%); /* FF3.6+ */
-background-image: url("images/bary.png"), -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(40%,rgba(0,0,0,0.35)), color-stop(60%,rgba(0,0,0,0.45)), color-stop(100%,rgba(0,0,0,0.5))); /* Chrome,Safari4+ */
-background-image: url("images/bary.png"), -webkit-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.35) 40%,rgba(0,0,0,0.45) 60%,rgba(0,0,0,0.5) 100%); /* Chrome10+,Safari5.1+ */
-background-image: url("images/bary.png"), -o-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.35) 40%,rgba(0,0,0,0.45) 60%,rgba(0,0,0,0.5) 100%); /* Opera 11.10+ */
-background-image: url("images/bary.png"), -ms-linear-gradient(top, rgba(0,0,0,0) 0%,rgba(0,0,0,0.35) 40%,rgba(0,0,0,0.45) 60%,rgba(0,0,0,0.5) 100%); /* IE10+ */
-background-image: url("images/bary.png"), linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.35) 40%,rgba(0,0,0,0.45) 60%,rgba(0,0,0,0.5) 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#b3000000',GradientType=0 ); /* IE6-9 */
+background-image: url("images/bary.png");background-color: #ffffff;
 }
 .ui-widget-header a { color: #222222; }
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { border: 1px solid #d3d3d3; background: #e6e6e6 url(images/trans.png) 50% 50% repeat-x; font-weight: normal; color: #555555; }
@@ -932,10 +930,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 .ui-priority-primary, .ui-widget-content .ui-priority-primary, .ui-widget-header .ui-priority-primary { font-weight: bold; }
 .ui-priority-secondary, .ui-widget-content .ui-priority-secondary,  .ui-widget-header .ui-priority-secondary { opacity: .7; filter:Alpha(Opacity=70); font-weight: normal; }
 .ui-state-disabled, .ui-widget-content .ui-state-disabled, .ui-widget-header .ui-state-disabled { opacity: .35; filter:Alpha(Opacity=35); background-image: none; }
-.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; -khtml-border-top-left-radius: 4px; border-top-left-radius: 4px; }
-.ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr { -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; -khtml-border-top-right-radius: 4px; border-top-right-radius: 4px; }
-.ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl { -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-left-radius: 4px; -khtml-border-bottom-left-radius: 4px; border-bottom-left-radius: 4px; }
-.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br { -moz-border-radius-bottomright: 4px; -webkit-border-bottom-right-radius: 4px; -khtml-border-bottom-right-radius: 4px; border-bottom-right-radius: 4px; }
+.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl { -moz-border-radius-topleft: 6px; -webkit-border-top-left-radius: 6px; -khtml-border-top-left-radius: 6px; border-top-left-radius: 6px; }
+.ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr { -moz-border-radius-topright: 6px; -webkit-border-top-right-radius: 6px; -khtml-border-top-right-radius: 6px; border-top-right-radius: 6px; }
+.ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl { -moz-border-radius-bottomleft: 6px; -webkit-border-bottom-left-radius: 6px; -khtml-border-bottom-left-radius: 6px; border-bottom-left-radius: 6px; }
+.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br { -moz-border-radius-bottomright: 6px; -webkit-border-bottom-right-radius: 6px; -khtml-border-bottom-right-radius: 6px; border-bottom-right-radius: 6px; }
 .ui-widget-overlay { background: #aaaaaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x; opacity: .30;filter:Alpha(Opacity=30); }
 .ui-widget-shadow { margin: -8px 0 0 -8px; padding: 8px; background: #aaaaaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x; opacity: .30;filter:Alpha(Opacity=30); -moz-border-radius: 8px; -khtml-border-radius: 8px; -webkit-border-radius: 8px; border-radius: 8px; }
 .ui-resizable { position: relative;}
@@ -950,8 +948,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', e
 .ui-resizable-nw { cursor: nw-resize; width: 9px; height: 9px; left: -5px; top: -5px; }
 .ui-resizable-ne { cursor: ne-resize; width: 9px; height: 9px; right: -5px; top: -5px;}
 .ui-accordion { width: 100%; }
-.ui-accordion .ui-accordion-header { background: url("images/bary.png") repeat-x scroll 50% 50% #FFFFFF;border: 1px solid #777777;cursor: pointer;margin-top: 1px;position: relative;text-shadow: 0px 0px 2px #454545;cursor: pointer; zoom: 1;  -webkit-box-shadow: 0 0 2px #9a9a9a; -moz-box-shadow: 0 0 2px #9a9a9a; -o-box-shadow: 0 0 2px #9a9a9a; -khtml-box-shadow: 0 0 2px #9a9a9a; box-shadow: 0 0 2px #9a9a9a; }
-.ui-accordion .ui-accordion-header:hover { background: url("images/bary.png") repeat-x scroll 50% 50% #eeeeee;border: 1px solid #777777;cursor: pointer;margin-top: 1px;position: relative;text-shadow: 0 0 1px #232323;cursor: pointer; zoom: 1; -webkit-box-shadow: 0 0 3px #888888 inset; -moz-box-shadow: 0 0 3px #888888 inset; -o-box-shadow: 0 0 3px #888888 inset; -khtml-box-shadow: 0 0 3px #888888 inset; box-shadow: 0 0 3px #888888 inset; }
+.ui-accordion .ui-accordion-header { background: url("images/bary.png") repeat-x scroll 50% 50% #FFFFFF;border: 1px solid #878787;cursor: pointer;margin-top: 2px;position: relative;text-shadow: 0px 0px 2px #454545;cursor: pointer; zoom: 1;  -webkit-box-shadow: 0 0 2px #9a9a9a; -moz-box-shadow: 0 0 2px #9a9a9a; -o-box-shadow: 0 0 2px #9a9a9a; -khtml-box-shadow: 0 0 2px #9a9a9a; box-shadow: 0 0 2px #9a9a9a; }
+.ui-accordion .ui-accordion-header:hover { background: url("images/bary.png") repeat-x scroll 50% 50% #eeeeee;border: 1px solid #777777;cursor: pointer;margin-top: 2px;position: relative;text-shadow: 0 0 1px #232323;cursor: pointer; zoom: 1; -webkit-box-shadow: 0 0 3px #888888 inset; -moz-box-shadow: 0 0 3px #888888 inset; -o-box-shadow: 0 0 3px #888888 inset; -khtml-box-shadow: 0 0 3px #888888 inset; box-shadow: 0 0 3px #888888 inset; }
 .ui-accordion .ui-accordion-li-fix { display: inline; }
 .ui-accordion .ui-accordion-header-active { border-bottom: 0 !important; }
 .ui-accordion .ui-accordion-header a { display: block; font-size: 1em; padding: .5em .5em .5em .7em; }
@@ -989,10 +987,12 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; }
 .ui-draggable .ui-dialog-titlebar { cursor: move; }
 .ui-tabs { position: relative; padding: .2em; zoom: 1; }
 .ui-tabs .ui-tabs-nav { margin: 0; padding: .3em .3em 0; }
-.ui-tabs .ui-tabs-nav li { border-color: #999999 #676767 #FFFFFF #BCBCBC;border-style: solid solid none;border-width: 1px 1px medium;float: left;list-style: none outside none;margin: 0 0.2em 1px 0;padding: 0;position: relative;top: 2px;white-space: nowrap;background: #ededed; }
+.ui-tabs .ui-tabs-nav li { border-color: #999999 #676767 #dedede #BCBCBC;border-style: solid;border-width: 1px;float: left;list-style: none outside none;margin: 0 0.2em 1px 0;padding: 0;position: relative;top: 2px;white-space: nowrap;background: #ededed; }
+.ui-tabs .ui-tabs-nav li:hover { border-color: #999999 #676767 #FFFFFF #BCBCBC;border-style: solid;border-width: 1px; }
+.ui-tabs li.ui-state-active { border-color: #999999 #676767 #FFFFFF #BCBCBC;border-style: solid;border-width: 1px; }
 .ui-tabs .ui-tabs-nav li.ui-state-default:hover a { padding: 0.6em 0.8em; }
 .ui-tabs .ui-tabs-nav li a { float: left; padding: .5em 1em; text-decoration: none; }
-.ui-tabs .ui-tabs-nav li.ui-tabs-selected { margin-bottom: 0;top: 1px; padding-bottom: 1px;color:  #fefefe;background: #ffffff; -webkit-box-shadow: 0 -2px 2px 0 #ababab; -moz-box-shadow: 0 -2px 2px 0 #ababab; -o-box-shadow: 0 -2px 2px 0 #ababab;  -khtml-box-shadow: 0 -2px 2px 0 #ababab; box-shadow: 0 -2px 2px 0 #ababab; }
+.ui-tabs .ui-tabs-nav li.ui-tabs-selected { margin-bottom: 0;top: 1px; padding-bottom: 1px;color:  #fefefe;background: #ffffff; }
 .ui-tabs .ui-tabs-nav li.ui-tabs-selected a, .ui-tabs .ui-tabs-nav li.ui-state-disabled a, .ui-tabs .ui-tabs-nav li.ui-state-processing a { cursor: text; }
 .ui-tabs .ui-tabs-nav li a, .ui-tabs.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-selected a { cursor: pointer; }
 .ui-tabs .ui-tabs-panel { display: block; border-width: 0; padding: 1em 1.4em 1.4em; background: none; }
