--- a/view/html/admin_options.html
+++ b/view/html/admin_options.html
@@ -181,8 +181,11 @@
                                             <div class="capability-item ###premium###">
                                                 <div>
                                                     <input type="checkbox" id="cap-###title###" name="wpaccess[advance][###title###]" value="1" class="capability-name" ###checked### />
-                                                    <label for="cap-###title###" title="###cap_name_full###" class="tooltip aacsprite" alt="###description###">###cap_name###</label>
-                                                </div>
+                                                    <label for="cap-###title###" title="###cap_name_full###" class="tooltip aacsprite">###cap_name###</label>
+                                               		
+                                               		<a href="" class="infocircle">i<span class="tooltiptwo"><span></span>###description###</span></a>                                          
+                                                
+                                                 </div>
                                                 <!-- ###CAPABILITY_DELETE### begin-->
                                                 <div class="aacsprite smex" onclick="mObj.deleteCapability('###title###', '###cap_name###');"><img title="delete capability" rel="delete capability" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></div>
                                                 <!-- ###CAPABILITY_DELETE### end-->
