--- a/view/css/wpaccess_style.css
+++ b/view/css/wpaccess_style.css
@@ -627,15 +627,15 @@ span.help2 { margin: 0 10px;position: absolute;line-height: 120%; }
 
 input ~ label.tooltip {
 background-position: -254px -73px;
-width:24px;height:24px;cursor:pointer;float:right;text-indent: -190px;
+width:24px;height:24px;cursor:pointer;float:right;text-indent: -175px;
 }
 input:checked ~ label.tooltip {
 background-position: -294px -73px;
-width:24px;height:24px;cursor:pointer;float:right;text-indent: -190px;
+width:24px;height:24px;cursor:pointer;float:right;text-indent: -175px;
 }
 input ~ label.tooltip:hover, input:checked ~ label.tooltip:hover {
 background-position: -274px -73px;
-width:24px;height:24px;cursor:pointer;float:right;text-indent: -190px;
+width:24px;height:24px;cursor:pointer;float:right;text-indent: -175px;
 }
 
 .acctop { padding-top: 20px; }
@@ -757,50 +757,6 @@ div a.lilsqbutton, .ui-dialog .ui-dialog-buttonpane button {
     -o-box-shadow: 0 0 2px #DDDDDD;
     -khtml-box-shadow: 0 0 2px #DDDDDD;
     box-shadow: 0 0 2px #DDDDDD;
-}
-
-.tooltip { 
-    color: #555555;
-    cursor: default; 
-}
-
-.tooltip { 
-    position: relative; 
-}
-
-.tooltip:hover:after {
-    background: none repeat scroll 0 0 #FFFFFF;
-    border-top: 2px solid #787878;
-    bottom: 0;
-    color: #555555;
-    content: attr(alt);
-    float: left;
-    font-family: helvetica,arial,sans serif;
-    font-size: 15px;
-    left: 0;
-    line-height: 18px;
-    padding: 12px 20px 10px 15px;
-text-indent: 2px;
-    position: fixed;
-    text-align: left;
-    width: 100%;
-    z-index: 999;
-    -webkit-box-shadow: 0px 0px 8px 2px #333333;
-    -moz-box-shadow: 0px 0px 8px 2px #333333;
-    -o-box-shadow: 0px 0px 8px 2px #333333;
-    -khtml-box-shadow: 0px 0px 8px 2px #333333;
-    box-shadow: 0px 0px 8px 2px #333333;
-}
-
-label.tooltip { 
-    width: 78%;
-    display: block;
-    float: left;
-    cursor: help; 
-}
-
-label.tooltip:hover { 
-    color: #454545; 
 }
 
 .right { 
@@ -1021,3 +977,126 @@ background-color: #898989;border:0;
 }
 .ui-dialog-titlebar-close:hover { border: 0; }
 input.capability-name { margin: 5px;display: none; }
+
+
+
+
+
+.infocircle {
+    border: 1px solid #BCBCBC;
+    color: #BCBCBC;
+    display: inline-block;
+    font-family: cursive;
+    font-size: 16px;
+    font-style: italic;
+    font-weight: bold;
+    height: 10px;
+    line-height: 14px;
+    margin: 4px 0 0 1px;
+    padding: 1px 1px 4px 4px;
+    text-decoration: none;
+    width: 10px;
+border-radius: 10px 10px 10px 10px;
+}
+
+.infocircle:hover, .infocircle a:hover {    
+	border: 1px solid #21759B;
+	color: #21759B;
+}
+
+
+div > .tooltiptwo, li > .tooltiptwo, a > .tooltiptwo, span > a.tooltiptwo {
+	opacity: 0;
+	margin-top: -10px;
+	visibility: hidden;
+	margin-left: -40px;
+
+	-webkit-transition-property:opacity, margin-top, visibility, margin-top;
+	-webkit-transition-duration:1.5s, 1.3s, 0.5s, 1.3s;  
+	-webkit-transition-timing-function: ease-in-out, ease-in-out, ease-in-out, ease-in-out;
+	-moz-transition-property:opacity, margin-top, visibility, margin-top;
+	-moz-transition-duration:1.5s, 1.3s, 0.5s, 1.3s;  
+	-moz-transition-timing-function: ease-in-out, ease-in-out, ease-in-out, ease-in-out;
+	-o-transition-property:opacity, margin-top, visibility, margin-top;
+	-o-transition-duration:1.5s, 1.3s, 0.5s, 1.3s;  
+	-o-transition-timing-function: ease-in-out, ease-in-out, ease-in-out, ease-in-out;
+	transition-property:opacity, margin-top, visibility, margin-top;
+	transition-duration:1.5s, 1.3s, 0.5s, 1.3s;  
+	transition-timing-function: ease-in-out, ease-in-out, ease-in-out, ease-in;
+}
+
+	div:hover > .tooltiptwo, li:hover > .tooltiptwo, a:hover > .tooltiptwo, span:hover > a.tooltiptwo,
+	a .tooltiptwo:hover, span .tooltiptwo:hover, li .tooltiptwo:hover, div a.tooltiptwo:hover {
+		opacity: 1;
+		visibility: visible;
+		overflow: visible;
+		margin-top: 20px;
+		display: inline;
+		margin-left: -40px;
+		-webkit-transition-property:opacity, margin-top, visibility, margin-top;
+		-webkit-transition-duration:1.5s, 0.3s, 0.5s, 0.3s;  
+		-webkit-transition-timing-function: ease-in-out, ease-in-out, ease-in-out, ease-in-out;
+		-moz-transition-property:opacity, margin-top, visibility, margin-top;
+		-moz-transition-duration:1.5s, 0.3s, 0.5s, 0.3s;  
+		-moz-transition-timing-function: ease-in-out, ease-in-out, ease-in-out, ease-in-out;		
+		-o-transition-property:opacity, margin-top, margin-top;
+		-o-transition-duration:1.5s, 0.3s, 0.3s;  
+		-o-transition-timing-function: ease-in-out, ease-in-out, ease-in-out;
+		transition-property:opacity, margin-top, visibility, margin-top;
+		transition-duration:1.5s, 0.3s, 0.3s;  
+		transition-timing-function: ease-in-out, ease-in-out, ease-in-out, ease-in-out;		
+	}
+
+.tooltiptwo {
+	background: #FEFEFE;
+	background: -moz-linear-gradient(top, #FEFEFE 0%, #FEFEFE 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#FEFEFE), color-stop(100%,#FEFEFE));
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FEFEFE', endColorstr='#FEFEFE',GradientType=0 );
+	border: 1px solid #bcbcbc;
+	padding: 10px;
+	margin-left: -40px;
+	position: absolute;
+	font-family: Arial;
+	font-size: 12px;
+	text-decoration: none;
+	font-style: normal;
+	color: #777;
+	text-shadow: 1px 1px 0 rgba(255,255,255,0.75);
+	z-index: 10;	
+	max-width: 400px;
+	
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	-o-border-radius: 3px;
+	border-radius: 3px;	
+	-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.1), inset 0 1px 0 #fff;
+	-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.1), inset 0 1px 0 #fff;	
+	-o-box-shadow: 0 1px 3px rgba(0,0,0,0.1), inset 0 1px 0 #fff;	
+	box-shadow: 0 1px 3px rgba(0,0,0,0.1), inset 0 1px 0 #fff;
+}
+
+.tooltiptwo span { /* Triangle */
+	background: #FEFEFE;
+	border: 0;
+	border-top: 1px solid #bcbcbc;
+	border-right: 1px solid #bcbcbc;	
+	width: 10px;
+	height: 10px;
+	margin-left: 15px;
+	margin-top: -16px;
+	display: block;
+	position: absolute;
+
+	-webkit-transform: rotate(-45deg);
+	-moz-transform: rotate(-45deg);
+	-o-transform: rotate(-45deg);
+	transform: rotate(-45deg);
+	-webkit-box-shadow: inset -1px 1px 0 #fff;
+	-moz-box-shadow: inset 0 1px 0 #fff;
+	-o-box-shadow: inset 0 1px 0 #fff;
+	box-shadow: inset 0 1px 0 #fff;
+			
+	display /*\**/: none\9;
+	*display: none !important;
+	*display: none;
+}
