--- a/view/html/admin_options.html
+++ b/view/html/admin_options.html
@@ -2,18 +2,18 @@
     <form action="###form_action###" method="post" id="aam-form">
         <div class="aacsprite aaclogo"><img title="logo" rel="logo" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></div>
         <div class="plugin-title">
-			<h2>###LABEL_1###</h2>
-			<!-- ###VERSION### begin-->
-				<!-- ###VERSION_BASIC### begin-->
-				<span class="version basic-type">
-					<a href="http://whimba.org/advanced-access-manager" target="_blank" title="###LABEL_152###">###LABEL_149###</a>
-				</span>
-				<!-- ###VERSION_BASIC### end-->
-				<!-- ###VERSION_PREMIUM### begin-->
-				<span class="version pro-type">###LABEL_140###</span>
-				<!-- ###VERSION_PREMIUM### end-->
-			<!-- ###VERSION### end-->
-		</div>
+            <h2>###LABEL_1###</h2>
+            <!-- ###VERSION### begin-->
+            <!-- ###VERSION_BASIC### begin-->
+            <span class="version basic-type">
+                <a href="http://whimba.org/advanced-access-manager" target="_blank" title="###LABEL_152###">###LABEL_149###</a>
+            </span>
+            <!-- ###VERSION_BASIC### end-->
+            <!-- ###VERSION_PREMIUM### begin-->
+            <span class="version pro-type">###LABEL_140###</span>
+            <!-- ###VERSION_PREMIUM### end-->
+            <!-- ###VERSION### end-->
+        </div>
         <div class="plugin-notification">
             <!-- ###ERROR_LIST### begin-->
             <p>###message### <a href="###url###" target="_blank">###LABEL_168###</a></p>
@@ -24,7 +24,7 @@
             <div class="ui-state-highlight">
                 <div class="aacsprite aactinyicons infoicon">
                     <span>###LABEL_6###!</span>
-                    </div>
+                </div>
             </div>
         </div>
         <br class="clear" />
@@ -54,7 +54,7 @@
                                 <div id="tabs-1">
                                     <div class="helpbox postbox main-menu-help">
                                         <div class="aacsprite aacsmicons aachelp"><span class="help1">###LABEL_172###</span></div>
-                                            <a href="#" class="squarebutton reorganize-menu">###LABEL_12###</a>
+                                        <a href="#" class="squarebutton reorganize-menu">###LABEL_12###</a>
                                         <br class="clear" />
                                     </div>
                                     <div class="main-menu-accordion">
@@ -64,14 +64,14 @@
                                             <div>
                                                 <div class="mainmenu-subitem-whole">
                                                     <input type="checkbox" name="wpaccess[menu][###menu###][whole]" value="1" id="whole" ###whole_checked### />
-                                                           &nbsp;&nbsp;###LABEL_13###
+                                                    &nbsp;&nbsp;###LABEL_13###
                                                 </div>
                                                 <!-- ###MAIN_MENU_SUBLIST### begin-->
                                                 <div class="postbox submenu-holder">
                                                     <!-- ###MAIN_MENU_SUBITEM### begin-->
                                                     <div class="mainmenu-subitem">
                                                         <input type="checkbox" name="wpaccess[menu][###menu###][sub][###value###]" value="1" ###checked### />
-                                                               &nbsp;&nbsp;###submenu_name###
+                                                        &nbsp;&nbsp;###submenu_name###
                                                     </div>
                                                     <!-- ###MAIN_MENU_SUBITEM### end-->
                                                     <br class="clear" />
@@ -85,16 +85,16 @@
                                 <!-- ###MAIN_MENU_TAB### end-->
                                 <!-- ###METABOX_TAB### begin-->
                                 <div id="tabs-2">
-                                <div class="helpbox postbox">
-                                      <span class="aacsprite aacsmicons aachelp tooltip" alt="###LABEL_14###"><img title="meta" rel="meta" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></span>
+                                    <div class="helpbox postbox">
+                                        <span class="aacsprite aacsmicons aachelp tooltip" alt="###LABEL_14###"><img title="meta" rel="meta" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></span>
                                         <div class="mbox">
                                             <input type="text" placeholder="###LABEL_15###" class="initialize-url-text" value="" />
                                             <a href="#" class="initialize-url lilsqbutton" >###LABEL_16###</a>
                                             <a href="#" class="refresh-metagox-list squarebutton" >###LABEL_17###</a>
                                         </div>
-                                                <div id="progressbar"></div>
+                                        <div id="progressbar"></div>
                                         <br class="clear" />
-                                        </div>
+                                    </div>
                                     <div class="metabox-accordion">
                                         <!-- ###METABOX_LIST_ITEM### begin-->
                                         <div>
@@ -181,11 +181,8 @@
                                             <div class="capability-item ###premium###">
                                                 <div>
                                                     <input type="checkbox" id="cap-###title###" name="wpaccess[advance][###title###]" value="1" class="capability-name" ###checked### />
-                                                    <label for="cap-###title###" title="###cap_name_full###" class="tooltip aacsprite">###cap_name###</label>
-                                               		
-                                               		<a href="" class="infocircle">i<span class="tooltiptwo"><span></span>###description###</span></a>                                          
-                                                
-                                                 </div>
+                                                    <label for="cap-###title###" title="###cap_name_full###" class="tooltip aacsprite" alt="###description###">###cap_name###</label>
+                                                </div>
                                                 <!-- ###CAPABILITY_DELETE### begin-->
                                                 <div class="aacsprite smex" onclick="mObj.deleteCapability('###title###', '###cap_name###');"><img title="delete capability" rel="delete capability" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></div>
                                                 <!-- ###CAPABILITY_DELETE### end-->
@@ -343,7 +340,7 @@
                                                     </td>
                                                     <td id="premium-ind"><span style="font-size: 10px; font-style: italic; font-weight: bold;">###LABEL_140###</span></td>
                                                 </tr>
-                                                 <tr>
+                                                <tr>
                                                     <th>###LABEL_151###</th>
                                                     <td><input type="checkbox" name="frontend_post_list" id="frontend_post_list" class="frontend-browse incat-check" value="1" /></td>
                                                     <td><input type="checkbox" name="backend_post_list" id="backend_post_list" class="backend-browse incat-check" value="1" /></td>
@@ -401,10 +398,10 @@
                                 <!-- ###RESTRICTION_TAB### end-->
                                 <!-- ###CONFIG_PRESS_TAB### begin-->
                                 <div id="tabs-5">
-                                <div class="helpbox postbox">
-                                    <a href="###reference_url###?width=800&TB_iframe=true" class="thickbox" id="cp-ref-trigger">
-                                    <span class="aacsprite aacsmicons aachelp tooltip" alt="###LABEL_161###"><img title="configpress" rel="configpress" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></span>
-                                    </a>
+                                    <div class="helpbox postbox">
+                                        <a href="###reference_url###?width=800&TB_iframe=true" class="thickbox" id="cp-ref-trigger">
+                                            <span class="aacsprite aacsmicons aachelp tooltip" alt="###LABEL_161###"><img title="configpress" rel="configpress" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></span>
+                                        </a>
                                         <span class="help2">###LABEL_157###</span>
                                     </div>
                                     <textarea id="access_config" name="wpaccess[config_press]">###access_config###</textarea>
@@ -476,8 +473,8 @@
                                     </div>
                                 </div>
                                 <div id="major-publishing-actions">
-                                        <div class="restore-conf aacsprite aacsmicons aacback" title="###LABEL_78###"><img title="back" rel="back" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></div>
-                                            <div class="save-action">
+                                    <div class="restore-conf aacsprite aacsmicons aacback" title="###LABEL_78###"><img title="back" rel="back" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></div>
+                                    <div class="save-action">
                                         <img src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/load.gif" style="display:none;" id="ajax-loading" alt="###LABEL_81###">
                                         <input name="save" id="save" class="lgsquarebutton" value="###LABEL_82###" tabindex="5" onclick="return mObj.submitForm();" type="submit" />
                                     </div>
@@ -532,6 +529,19 @@
                         </div>
                     </div>
                     <!-- ###ROLE_METABOX### end-->
+                    <div id="metabox-wpaccess-recommend" class="postbox" >
+                        <div class="handlediv" title="###LABEL_72###"><br /></div>
+                        <h3 class="hndle"><span>###LABEL_95###</span></h3>
+                        <div class="inside" style="width:100%; margin: 0px; padding: 0px;">
+                            <div style="margin: 5px; float: left; width: 40px;">
+                                <img title="logo" rel="logo" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/ahm.png" />
+                            </div>
+                            <div style="margin: 5px; float: left; width: 180px; text-align: justify;">
+                                <a href="http://wordpress.org/extend/plugins/advanced-health-manager/" target="_blank">Advanced Health Manager</a> is a great plugin to control your Website vulnerability.
+                            </div>
+                            <br class="clear" />
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
