--- a/view/html/admin_options.html
+++ b/view/html/admin_options.html
@@ -529,19 +529,24 @@
                         </div>
                     </div>
                     <!-- ###ROLE_METABOX### end-->
+                    <!-- ###AHM_METABOX### begin-->
                     <div id="metabox-wpaccess-recommend" class="postbox" >
                         <div class="handlediv" title="###LABEL_72###"><br /></div>
                         <h3 class="hndle"><span>###LABEL_95###</span></h3>
                         <div class="inside" style="width:100%; margin: 0px; padding: 0px;">
-                            <div style="margin: 5px; float: left; width: 40px;">
+                            <div style="margin: 5px; float: left; width: 30px; padding: 10px 0 0 5px;">
                                 <img title="logo" rel="logo" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/ahm.png" />
                             </div>
                             <div style="margin: 5px; float: left; width: 180px; text-align: justify;">
-                                <a href="http://wordpress.org/extend/plugins/advanced-health-manager/" target="_blank">Advanced Health Manager</a> is a great plugin to control your Website vulnerability.
+                                <a href="http://wordpress.org/extend/plugins/wp-bug-tracker/" target="_blank">WordPress Bug Tracker</a> will help me to improve AAM and you to maintain your system.
+                            </div>
+                            <div style="text-align: center">
+                                <a href="###install_link###" class="button button-primary button-large">Install Plugin</a>
                             </div>
                             <br class="clear" />
                         </div>
                     </div>
+                    <!-- ###AHM_METABOX### end-->
                 </div>
             </div>
         </div>
