--- a/view/html/admin_options.html
+++ b/view/html/admin_options.html
@@ -399,9 +399,7 @@
                                 <!-- ###CONFIG_PRESS_TAB### begin-->
                                 <div id="tabs-5">
                                     <div class="helpbox postbox">
-                                        <a href="###reference_url###?width=800&TB_iframe=true" class="thickbox" id="cp-ref-trigger">
-                                            <span class="aacsprite aacsmicons aachelp tooltip" alt="###LABEL_161###"><img title="configpress" rel="configpress" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></span>
-                                        </a>
+                                        <span class="aacsprite aacsmicons aachelp"><img title="configpress" rel="configpress" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></span>
                                         <span class="help2">###LABEL_157###</span>
                                     </div>
                                     <textarea id="access_config" name="wpaccess[config_press]">###access_config###</textarea>
