--- a/view/html/admin_options.html
+++ b/view/html/admin_options.html
@@ -482,6 +482,24 @@
                         </div>
                     </div>
                     <!-- ###SUBMIT_METABOX### end-->
+                    <div class="postbox" style="background: linear-gradient(to top, #FFBBBB, #FFDDDD) repeat scroll 0 0 #F5F5F5;">
+                        <div class="handlediv" title="###LABEL_72###"><br /></div>
+                        <h3 class="hndle"><span>Important Update!</span></h3>
+                        <div class="inside" style="width:100%; margin: 0px; padding: 0px;">
+                            <div id="minor-publishing">
+                                <div class="important-notice">
+                                    AAM is moving forward. New release 2.0 is under intensive development. 
+                                    Follow us on <a href="https://twitter.com/wpaam" target="_blank">twitter</a> or visit our <a href="http://wpaam.com" target="_blank">website</a> to subscribe for updates.
+                                </div>
+                            </div>
+                            <div id="major-publishing-actions">
+                                <div class="aam-actions">
+                                    <a href="https://twitter.com/wpaam" target="_blank" class="aam-action aam-action-twitter">Follow @wpaam</a>
+                                    <a href="http://wpaam.com" target="_blank" class="aam-action aam-action-link">Visit Website</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <!-- ###ROLE_METABOX### begin-->
                     <div id="metabox-wpaccess-rolemanager" class="postbox" >
                         <div class="handlediv" title="###LABEL_72###"><br /></div>
