--- a/view/html/admin_options.html
+++ b/view/html/admin_options.html
@@ -48,7 +48,8 @@
                                     <li><a href="#tabs-2">###LABEL_8###</a></li>
                                     <li><a href="#tabs-3">###LABEL_9###</a></li>
                                     <li><a href="#tabs-4">###LABEL_10###</a></li>
-                                    <li><a href="#tabs-5">###LABEL_80###</a></li>
+                                    <li><a href="#tabs-5">###LABEL_65###</a></li>
+                                    <li><a href="#tabs-6">###LABEL_80###</a></li>
                                 </ul>
                                 <!-- ###MAIN_MENU_TAB### begin-->
                                 <div id="tabs-1">
@@ -396,8 +397,11 @@
                                     <br class="clear" />
                                 </div>
                                 <!-- ###RESTRICTION_TAB### end-->
+                                <!-- ###EVENT_MANAGER_TAB### begin-->
+                                <span>Event Manager Tab</span>
+                                <!-- ###EVENT_MANAGER_TAB### end-->
                                 <!-- ###CONFIG_PRESS_TAB### begin-->
-                                <div id="tabs-5">
+                                <div id="tabs-6">
                                     <div class="helpbox postbox">
                                         <span class="aacsprite aacsmicons aachelp"><img title="configpress" rel="configpress" src="###site_url###/wp-content/plugins/advanced-access-manager/view/css/images/nothing.gif" /></span>
                                         <span class="help2">###LABEL_157###</span>
