--- a/media/css/aam.css
+++ b/media/css/aam.css
@@ -5,6 +5,10 @@
  * ======================================================================
 */
 
+#aam{
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+}
+
 .alpha-notice{
     margin: 15px 10px;
     border: 1px solid #FF8888;
@@ -16,6 +20,10 @@
 }
 
 /** GLOBAL AAM STYLES */
+#aam_form{
+    position: relative;
+}
+
 .aam-hidden{
     display: none;
 }
@@ -45,6 +53,11 @@
 
 .dialog-content{
     text-align: center;
+}
+
+.dialog-note{
+    font-size: 0.8em;
+    margin-bottom: 0;
 }
 
 .dialog-input{
@@ -145,9 +158,18 @@
     font-weight: bold;
 }
 
+.current-site{
+    text-transform: capitalize;
+    font-weight: bold;
+    color: #257DA6;
+    margin-right: 4px;
+}
+
+
 .current-subject{
     text-transform: capitalize;
     font-weight: bold;
+    color: #bf0909;
 }
 
 /** FEATURE LIST STYLES */
@@ -168,7 +190,7 @@
 }
 
 .feature-item:hover{
-    background-color: #E2E4FF;
+    border: 1px solid #006400;
 }
 
 .feature-item-active{
@@ -181,6 +203,11 @@
     display: table-cell;
     padding-left: 38px;
     vertical-align: middle;
+}
+
+.feature-item-active span{
+    font-weight: bold;
+    color: #FFFFFF;
 }
 
 .feature-content{
@@ -810,6 +837,7 @@
     display: inline-block;
     line-height: 25px;
     height: 29px;
+    font-size: 0.8em;
 }
 
 .metabox-item input[type="checkbox"] {
@@ -1027,7 +1055,7 @@ a.capability-action{
 }
 
 .post-action-lock{
-     background-image: url('images/lock.png');
+    background-image: url('images/lock.png');
 }
 
 .post-action input[type="checkbox"] {
@@ -1230,15 +1258,14 @@ a.capability-action{
 
 .aam-lock-big{
     display: table;
-    font-size: 12px;
-    font-weight: bold;
     width: 100%;
     height: 120px;
-    background: transparent url('images/post/lock-big.png') no-repeat center; 
+    background: transparent url('images/post/lock-big.png') no-repeat center;
 }
 
 a.aam-lock-big{
     text-decoration: none;
+    outline: 0;
 }
 
 .aam-lock-big span{
@@ -1246,6 +1273,8 @@ a.aam-lock-big{
     vertical-align: bottom;
     text-align: center;
     text-transform: uppercase;
+    font-size: 0.8em;
+    font-weight: bold;
 }
 
 .aam-post-access-notice{
